fixing messenger view on mobile

--- a/client/src/pages/messenger/Messenger.css
+++ b/client/src/pages/messenger/Messenger.css
@@ -235,6 +235,8 @@
 @media screen and (max-width: 700px) {
     .messenger {
         height: calc(100vh - 127px);
+        bottom: 55px;
+        top: 70px;
     }
     .chatMenu {
         flex: 2;
